0.9.0 (currently working on)
- [#3050] Change: In the flexforms tab "list view", use the GRSP settings when selecting records
- [#2998] Feature: Hide newly created/edited events depending on the setting in the FE user group
- [#3007] Feature: Add a "Files" column to the list view
- [#2688| Change: Rework the FE editor HTML template and CSS
- [#2997] Feature: Add a FE user group setting for hiding FE-edited events
- [#2701] Fix: Image of a seminar was not displayed in single view
- [#2551] Fix: FE editor field labels have colons at the end
- [#2994] Fix: Check if the data for the seminars is loaded from general storage PID
- [#2944] Feature: Add monkey functionality to the datepicker
- [#2945] Feature: Filter the list view by the date selected in the search widget
- [#2940] Feature: Add a datepicker to the list view
- [#2937] Change: Show the list view search widget parts depending on the flexforms
- [#2610] Change: Polish the BE events list
- [#2536] Change: Change the organizers field in table tx_seminars_seminars to an unsigned integer
- [#2953] Fix: Use TYPO3's wrapper for the multibyte string functions
- [#2971] Fix: Crash/SQL error in the list view if the static template is not included
- [#2948] Change: Change the payment methods field in table tx_seminars_seminars to an unsigned integer
- [#2956] Fix: Two tests failures in seminars_pi1 testcase
- [#2963] Fix: Registration crashes with fatal error
- [#2923] Feature: In the list view, show registration begin date for events with registration_begin_date in future
- [#2941] Feature: Add filtering by date range to the seminar bag builder

0.8.0 (branched 2009-04-24)
- [#2922] Feature: Hide the registration link in the list view when registration_begin_date is in future
- [#2488] Fix: Test failure testTypoScriptConfigurationIsLoaded
- [#2925] Feature: Show the organizers description in the single view, if not empty